apps/search-server/overlays/dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: search-server-route
  namespace: dev
spec:
  entryPoints:
    - websecure  # HTTPS
  routes:
    # Search Server - 공연장 검색 API
    - match: Host(`tickget.kr`) && PathPrefix(`/api/v1/dev/search`)
      kind: Rule
      priority: 200
      services:
        - name: search-server-service
          port: 80
          namespace: dev
      middlewares:
        - name: search-server-middleware
          namespace: dev

  # TLS (HTTPS) 설정
  tls:
    secretName: tickget-kr-tls
